Update by gulp script.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "Desmond Yao",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
   },
   "dependencies": {
     "gulp-shell": "^0.5.2"
