Update by gulp script.

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,6 @@ links:
   MarkZhai: http://blog.zhaiyifan.cn/
   泥阿布: http://abner-nimengbo.cn/
   谢权: https://xiequan.info
+
+contact:
+  email: yaojy1121@gmail.com
